[gd_scene load_steps=2 format=3 uid="uid://d3h8k2m5n7p9"]

[ext_resource type="Script" path="res://src/ui/HUD.gd" id="1_hud"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="TopBar" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 40

[node name="CoinContainer" type="HBoxContainer" parent="MarginContainer/TopBar"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="CoinIcon" type="Label" parent="MarginContainer/TopBar/CoinContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843, 0, 1)
theme_override_font_sizes/font_size = 24
text = "$"

[node name="CoinLabel" type="Label" parent="MarginContainer/TopBar/CoinContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "0"

[node name="Spacer" type="Control" parent="MarginContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TimerContainer" type="VBoxContainer" parent="MarginContainer/TopBar"]
layout_mode = 2

[node name="TimerLabel" type="Label" parent="MarginContainer/TopBar/TimerContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "00:00.00"
horizontal_alignment = 1

[node name="PuzzleProgress" type="Label" parent="MarginContainer/TopBar/TimerContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "Puzzles: --"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="MarginContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RightPanel" type="VBoxContainer" parent="MarginContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 8

[node name="AdvantagesLabel" type="Label" parent="MarginContainer/TopBar/RightPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 12
text = "Advantages:"

[node name="AdvantagesContainer" type="VBoxContainer" parent="MarginContainer/TopBar/RightPanel"]
unique_name_in_owner = true
layout_mode = 2

[node name="MinimapContainer" type="Control" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
offset_left = 1060.0
offset_top = 80.0
offset_right = 1260.0
offset_bottom = 230.0

[node name="MinimapBG" type="ColorRect" parent="MarginContainer/MinimapContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 0.8)

[node name="MinimapLabel" type="Label" parent="MarginContainer/MinimapContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -10.0
offset_right = 30.0
offset_bottom = 10.0
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 12
text = "Minimap"
horizontal_alignment = 1

[node name="Crosshair" type="Control" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Horizontal" type="ColorRect" parent="Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -1.0
offset_right = 8.0
offset_bottom = 1.0
color = Color(1, 1, 1, 0.8)

[node name="Vertical" type="ColorRect" parent="Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -8.0
offset_right = 1.0
offset_bottom = 8.0
color = Color(1, 1, 1, 0.8)

[node name="InteractionPrompt" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 30.0
offset_right = 100.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = ""
horizontal_alignment = 1
vertical_alignment = 1
